--- a/package.json
+++ b/package.json
@@ -11,13 +11,23 @@
     "@types/node": "^12.20.11",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
+    "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
+    "axios-hooks": "^2.6.1",
+    "bootstrap": "^4.6.0",
     "concurrently": "^6.0.2",
+    "formik": "^2.2.6",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
     "typescript": "^4.2.4",
     "wait-on": "^5.3.0",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "dev": "concurrently -k \"npm start\" \"npm:electron\"",
